transportOrders: fixed the from and to addresses not being top-aligned in the driver's section of the edit form.

--- a/frontend/app/transportOrders/assets/main.css
+++ b/frontend/app/transportOrders/assets/main.css
@@ -63,6 +63,7 @@
 }
 .tp-form-driver-help > .form-group {
   display: inline-block;
+  vertical-align: top;
   margin-right: 1em;
   margin-bottom: 1em;
 }
